syntax = "proto3";

package proto.message;

message Response {
    Status status = 1;
    string message = 2;

    enum Status {
        SUCCESS = 0;
        FAILURE = 1;
    }
}

message AddPeerRequest {
    string message = 1;
}

message AddPeerResponse {
    Response response = 1;
}

message Collation {
    int64 shardID = 1;
    int64 period = 2;
    bytes blobs = 3;
}

message CollationRequest {
    int64 shardID = 1;
    int64 period = 2;
    string hash = 3;
}

message CollationResponse {
    Response response = 1;
    Collation collation = 2;
}

message ShardPeerRequest {
    repeated int64 shardIDs = 1;
}

message Peers {
    repeated string peers = 1;
}

message ShardPeerResponse {
    Response response = 1;
    map<int64, Peers> shardPeers = 2;
}
